--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "0.20.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "vercel": "^21.0.1",
     "web-vitals": "^0.2.4"
